# canonicalizer

./: Makefile  dev.ipynb  pyproject.toml  scratch.txt  tag_registry.yaml
adapters/: matcher_loader.py  sentiment_model.py
config/tag_registry/: creatures.yaml  general.yaml
domain/: models.py  topic_mapping.py
ports/: exporter.py  loader.py
scripts/: load_spacy_model.sh
services/: canonicalizer.py
tests/: test_descriptor_extraction.py
